--- a/package.json
+++ b/package.json
@@ -6,10 +6,22 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "amazon-cognito-identity-js": "^5.2.4",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "d3-shape": "^3.1.0",
+    "hammerjs": "^2.0.8",
+    "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.2",
+    "react-tab": "^1.0.0",
+    "react-table": "^7.7.0",
+    "react-table-sticky": "^1.1.3",
+    "react-tabs": "^3.2.3",
+    "recharts": "^2.1.8",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
