--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hammerjs": "^2.0.8",
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.2",
