just backing up

--- a/package.json
+++ b/package.json
@@ -7,20 +7,28 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.4",
+    "aws-sdk": "^2.1073.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "d3-shape": "^3.1.0",
+    "deepcopy": "^2.1.0",
     "hammerjs": "^2.0.8",
+    "immer": "^9.0.12",
+    "jeezy": "^1.13.1",
+    "json-server": "^0.17.0",
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-rnd": "^10.3.5",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.2",
     "react-tab": "^1.0.0",
     "react-table": "^7.7.0",
     "react-table-sticky": "^1.1.3",
     "react-tabs": "^3.2.3",
+    "react-tradingview-widget": "^1.3.2",
     "recharts": "^2.1.8",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
