--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-grid-layout": "^1.3.4",
     "react-pro-sidebar": "^0.7.1",
     "react-rnd": "^10.3.5",
     "react-router-dom": "^6.2.1",
