--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.4",
+    "atom": "^1.4.1",
     "aws-sdk": "^2.1073.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
@@ -16,6 +17,7 @@
     "immer": "^9.0.12",
     "jeezy": "^1.13.1",
     "json-server": "^0.17.0",
+    "lodash": "^4.17.21",
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
